--- a/LawyerProject/app/src/main/res/layout/view_forget_password.xml
+++ b/LawyerProject/app/src/main/res/layout/view_forget_password.xml
@@ -21,11 +21,12 @@
             android:padding="3dip"
             android:background="@drawable/btn_login"
             android:text="@string/verify"
+            android:onClick="VeviryClick"
             android:textColor="@android:color/white"
             android:textSize="@dimen/button_text" />
 
         <EditText
-            android:id="@+id/usernameEditText"
+            android:id="@+id/mobileEditText"
             android:layout_width="match_parent"
             android:layout_height="@dimen/edittext_height"
             android:layout_marginRight="5dp"
@@ -47,8 +48,8 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/input_bg"
             android:hint="@string/verify_number"
-            android:inputType="textPassword"
-            android:layout_below="@+id/usernameEditText"
+            android:inputType="text"
+            android:layout_below="@+id/mobileEditText"
             android:padding="3dip"
             android:textColorHint="#aab2be"
             android:textColor="@color/edittext_input_color"
@@ -74,6 +75,7 @@
             android:layout_below="@+id/passwordEditText"
             android:background="@drawable/btn_login"
             android:text="@string/confirm"
+            android:onClick="ConfirmClick"
             android:textColor="@android:color/white"
             android:textSize="@dimen/button_text" />
     </RelativeLayout>
