--- a/LawyerProject/app/src/main/res/layout/view_fragment_help.xml
+++ b/LawyerProject/app/src/main/res/layout/view_fragment_help.xml
@@ -1,24 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white" >
+    android:background="@android:color/white"
+    android:orientation="vertical">
 
     <WebView
         android:id="@+id/helpWebView"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
+        android:layout_height="fill_parent" />
 
-    <ProgressBar
-        android:id="@+id/progressbar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="100dip"
-        android:layout_height="100dip"
-        android:layout_centerInParent="true"
-        android:background="@android:color/white"
-        android:indeterminate="false"
-        android:padding="20dip"
-        android:visibility="visible" >
-    </ProgressBar>
 
-</RelativeLayout>
+</LinearLayout>
