--- a/LawyerProject/app/src/main/res/layout/view_fragment_main_menu.xml
+++ b/LawyerProject/app/src/main/res/layout/view_fragment_main_menu.xml
@@ -33,6 +33,7 @@
         android:id="@+id/lineTextView"
         android:layout_width="match_parent"
         android:layout_height="1px"
+        android:layout_marginRight="10dp"
         android:layout_below="@+id/avaterImageView"
         android:background="@color/line_color"
         android:layout_marginTop="20dp"/>
@@ -44,6 +45,7 @@
         android:divider="@color/line_color"
         android:layout_below="@+id/lineTextView"
         android:dividerHeight="1px"
+        android:layout_marginRight="10dp"
         android:footerDividersEnabled="true"
         android:headerDividersEnabled="true"
         android:layout_above="@+id/workButton"
