--- a/LawyerProject/app/src/main/res/values/dimens.xml
+++ b/LawyerProject/app/src/main/res/values/dimens.xml
@@ -9,4 +9,7 @@
     <dimen name="title_text">22sp</dimen>
     <dimen name="edittext_height">48dp</dimen>
     <dimen name="text_20">20sp</dimen>
+
+    <dimen name="shadow_width">3dp</dimen>
+    <dimen name="slidingmenu_offset">50dp</dimen>
 </resources>
