--- a/LawyerProject/app/src/main/res/values/styles.xml
+++ b/LawyerProject/app/src/main/res/values/styles.xml
@@ -18,4 +18,27 @@
         <item name="android:backgroundDimEnabled">true</item>
     </style>
 
+    <!-- 弹出对话框 -->
+    <style name="CustomDialogstyle" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@drawable/bg</item>
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
+
+    <!-- Activity对话框 -->
+    <style name="ActivityDialogStyle">
+        <item name="android:windowBackground">@android:color/transparent</item><!-- 窗口背景色  -->
+        <item name="android:windowFrame">@null</item><!-- Dialog的windowFrame框为无   -->
+        <item name="android:windowNoTitle">true</item><!--  -->
+        <item name="android:windowIsFloating">true</item><!--是否浮现在activity之上  -->
+        <item name="android:windowIsTranslucent">true</item><!-- 窗口是否半透明——是（与第一条配合使用）   -->
+        <item name="android:windowContentOverlay">@null</item><!-- 这个不设置的话，可能会出现边框黑线   -->
+        <item name="android:windowAnimationStyle">@android:style/Theme.Holo.DialogWhenLarge</item><!-- 窗口弹出效果   -->
+        <item name="android:backgroundDimEnabled">true</item><!--是否允许背景模糊   -->
+        <item name="android:windowCloseOnTouchOutside">false</item>
+    </style>
+
 </resources>
