--- a/LawyerProject/app/src/main/res/values/urls.xml
+++ b/LawyerProject/app/src/main/res/values/urls.xml
@@ -3,5 +3,7 @@
 
     <string name="base_url">http://api.shuofatang.com/router</string>
     <string name="lawyer_login_url">lawyer.login</string>
+    <string name="lawyer_validationcode_url">validationCode.get</string>
+    <string name="lawyer.register_url">lawyer.register</string>
 
  </resources>
