--- a/LawyerProject/app/src/main/res/layout/view_custom_dialog_comfirm.xml
+++ b/LawyerProject/app/src/main/res/layout/view_custom_dialog_comfirm.xml
@@ -23,12 +23,18 @@
             <TextView
                 android:id="@+id/title"
                 android:layout_width="fill_parent"
-                android:layout_height="48dp"
-                android:gravity="center"
-                android:textColor="#ff7d7d7d"
-                android:textSize="18sp" />
+                android:layout_height="wrap_content"
+                android:gravity="center|left"
+                android:drawableLeft="@android:drawable/ic_dialog_info"
+                android:textColor="#3CB6E3"
+                android:drawablePadding="5dp"
+                android:padding="10dp"
+                android:textSize="22sp" />
         </LinearLayout>
-
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:background="#3CB6E3"/>
         <LinearLayout
             android:id="@+id/content"
             android:layout_width="fill_parent"
@@ -38,17 +44,18 @@
 
             <TextView
                 android:id="@+id/message"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center|left"
-                android:gravity="center|left"
-                android:minHeight="48dip"
+                android:layout_gravity="top|left"
+                android:gravity="top|left"
+                android:minHeight="60dip"
                 android:maxHeight="300dip"
+                android:text="dfsdafadsfa"
                 android:padding="10dip"
                 android:scrollbars="vertical"
                 android:singleLine="false"
-                android:textColor="#ff7d7d7d"
-                android:textSize="15sp" />
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -66,8 +73,9 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
+                android:textColor="#ff7d7d7d"
                 android:background="@android:color/transparent"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
 
             <LinearLayout
                 android:layout_width="1px"
@@ -79,8 +87,9 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
+                android:textColor="#ff7d7d7d"
                 android:background="@android:color/transparent"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
         </LinearLayout>
     </LinearLayout>
 
