--- a/LawyerProject/app/src/main/res/drawable/btn_login.xml
+++ b/LawyerProject/app/src/main/res/drawable/btn_login.xml
@@ -2,6 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@drawable/btn_login_pressed" android:state_pressed="true"/>
+    <item android:drawable="@drawable/btn_login_enable" android:state_enabled="false"/>
     <item android:drawable="@drawable/btn_login_normal"/>
 
 </selector>
