--- a/LawyerProject/app/src/main/res/layout/view_fragment_advice_item.xml
+++ b/LawyerProject/app/src/main/res/layout/view_fragment_advice_item.xml
@@ -28,7 +28,7 @@
             android:layout_alignParentLeft="true"
             android:textColor="@android:color/black"
             android:textSize="@dimen/input_text"
-            android:text=""/>
+            android:text="昵称"/>
         <TextView
             android:id="@id/mobileTextView"
             android:layout_width="wrap_content"
