--- a/LawyerProject/app/src/main/res/layout/view_fragment_main.xml
+++ b/LawyerProject/app/src/main/res/layout/view_fragment_main.xml
@@ -21,11 +21,12 @@
             android:src="@drawable/greenroundbtn" />
 
         <TextView
+            android:id="@+id/orderTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:text="听单中"
+            android:text="抢单"
             android:textColor="@android:color/white"
             android:textSize="@dimen/text_20" />
     </RelativeLayout>
