--- a/LawyerProject/app/src/main/res/layout/view_fragment_order_item.xml
+++ b/LawyerProject/app/src/main/res/layout/view_fragment_order_item.xml
@@ -22,14 +22,15 @@
         android:padding="5dp"
         android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/orderStatueTextView"
+            android:id="@+id/userNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:textColor="@android:color/black"
             android:textSize="@dimen/input_text"
-            android:text="未支付"/>
+            android:text="昵称"/>
         <TextView
+            android:id="@id/mobileTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -37,17 +38,6 @@
             android:textSize="@dimen/input_text"
             android:text="暂无律师"/>
     </RelativeLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="@color/line_color"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
-        android:textSize="@dimen/input_text"
-        android:text="律所 暂无"
-        android:padding="5dp"/>
     <TextView
         android:id="@+id/productNameTextView"
         android:layout_width="match_parent"
@@ -66,6 +56,14 @@
         android:padding="5dp"/>
     <TextView
         android:id="@+id/createTimeTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
+        android:textSize="@dimen/input_text"
+        android:text="06月26时 9:37"
+        android:padding="5dp"/>
+    <TextView
+        android:id="@+id/validTimeTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@android:color/black"
