--- a/LawyerProject/app/src/main/res/values/urls.xml
+++ b/LawyerProject/app/src/main/res/values/urls.xml
@@ -13,6 +13,7 @@
     <string name="lawyer_firm_get_url">lawFirm.get</string>
     <string name="lawyer_order_list_url">order.list</string>
     <string name="lawyer_order_newlist_url">order.newlist</string>
+    <string name="lawyer_order_bind_url">order.bind</string>
     <string name="lawyer_consult_list_url">consult.list</string>
 
 
