--- a/LawyerProject/app/src/main/res/layout/view_person.xml
+++ b/LawyerProject/app/src/main/res/layout/view_person.xml
@@ -426,6 +426,43 @@
                 android:layout_width="match_parent"
                 android:layout_height="1px"
                 android:background="@color/line_color" />
+            <LinearLayout
+                android:id="@+id/uploadLinearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/header_height"
+                android:layout_gravity="center"
+                android:background="@android:color/white"
+                android:orientation="horizontal"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="@string/lawyer_upload_certificate"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/button_text" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:drawablePadding="10dp"
+                    android:gravity="center|right"
+                    android:textColor="@android:color/black"
+                    android:textColorHint="@color/line_color"
+                    android:drawableRight="@drawable/icon_arrow"
+                    android:textSize="@dimen/button_text" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:background="@color/line_color" />
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/edittext_height"
